[tool.poetry]
name = "avmp"
version = "0.1.0"
description = "Command line vulnerability program manager."
authors = ["RackReaver <rackreaver@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
click = "7.1.2"
jira = "2.0.0"
pyTenable = "1.2.6"
requests = "2.25.1"

[tool.poetry.dev-dependencies]
autopep8 = "1.5.4"
coverage = "5.5"
pytest = "6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
