[tool.poetry]
name = "avmp"
version = "0.1.1"
description = "Command line vulnerability program manager."
authors = ["RackReaver <rackreaver@gmail.com>"]
license = "Apache-2.0"

readme = "README.md"  # Markdown files are supported

repository = "https://github.com/RackReaver/AVMP"
homepage = "https://github.com/RackReaver/AVMP"

keywords = ["automation", "jira", "vulnerability-detection", "vulnerability-management", "vulnerability-scanners", "vulnerability-assessment", "tenable", "vulnerability-scanning", "tenableio"]

[tool.poetry.scripts]
avmp = "avmp.core.cli: main"

[tool.poetry.dependencies]
python = "^3.9"
jira = "2.0.0"
pyTenable = "1.2.6"
requests = "2.25.1"
docopt = "^0.6.2"
netaddr = "^0.8.0"

[tool.poetry.dev-dependencies]
autopep8 = "1.5.4"
coverage = "5.5"
pytest = "6.2.4"
isort = "^5.10.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
